docs-website/versioned_docs/version-2.31/document-stores/opensearch-document-store.mdx
---
title: "OpenSearchDocumentStore"
id: opensearch-document-store
slug: "/opensearch-document-store"
description: "A Document Store for storing and retrieval from OpenSearch."
---

# OpenSearchDocumentStore

A Document Store for storing and retrieval from OpenSearch.

<div className="key-value-table">

|  |  |
| --- | --- |
| API reference | [OpenSearch](/reference/integrations-opensearch)                                                    |
| GitHub link   | https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/opensearch |

</div>

OpenSearch is a fully open source search and analytics engine for use cases such as log analytics, real-time application monitoring, and clickstream analysis. For more information, see the [OpenSearch documentation](https://opensearch.org/docs/).

This Document Store is great if you want to evaluate the performance of different retrieval options (dense vs. sparse). It’s compatible with the Amazon OpenSearch Service.

OpenSearch provides support for vector similarity comparisons and approximate nearest neighbors algorithms.

### Initialization

[Install](https://opensearch.org/docs/latest/install-and-configure/install-opensearch/index/) and run an OpenSearch instance.

If you have Docker set up, we recommend pulling the Docker image and running it.

```shell
docker pull opensearchproject/opensearch:3.5.0
docker run \
    -p 9200:9200 \
    -p 9600:9600 \
    -e "discovery.type=single-node" \
    -e "ES_JAVA_OPTS=-Xms1024m -Xmx1024m" \
    -e "OPENSEARCH_INITIAL_ADMIN_PASSWORD=SecureHaystack*2026" \
    opensearchproject/opensearch:3.5.0
```

As an alternative, you can go to [OpenSearch integration GitHub](https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/opensearch) and start a Docker container running OpenSearch using the provided `docker-compose.yml`:

```shell
docker compose up
```

Once you have a running OpenSearch instance, install the `opensearch-haystack` integration:

```shell
pip install opensearch-haystack
```

Then, initialize an `OpenSearchDocumentStore` object that’s connected to the OpenSearch instance and writes documents to it:

```python
from haystack_integrations.document_stores.opensearch import OpenSearchDocumentStore
from haystack import Document

document_store = OpenSearchDocumentStore(
    hosts="http://localhost:9200",
    use_ssl=True,
    verify_certs=False,
    http_auth=("admin", "SecureHaystack*2026"),
)
document_store.write_documents(
    [Document(content="This is first"), Document(content="This is second")],
)
print(document_store.count_documents())
```

The `http_auth` value depends on how your OpenSearch instance is deployed:

- For the local Docker example above, use the OpenSearch admin user and the value you set in `OPENSEARCH_INITIAL_ADMIN_PASSWORD`.
- For Amazon OpenSearch Service, do not use the local Docker password or IAM console password as `http_auth`.
  Configure the authentication method required by your domain instead. For IAM-based access, pass an AWS SigV4 auth
  object, such as `AWSV4SignerAuth`, as shown in the [OpenSearch Python client documentation](https://docs.opensearch.org/latest/clients/python-low-level/#connecting-to-amazon-opensearch-service).

### Supported Retrievers

[`OpenSearchBM25Retriever`](../pipeline-components/retrievers/opensearchbm25retriever.mdx): A keyword-based Retriever that fetches documents matching a query from the Document Store.

[`OpenSearchEmbeddingRetriever`](../pipeline-components/retrievers/opensearchembeddingretriever.mdx): Compares the query and document embeddings and fetches the documents most relevant to the query.

## Additional References

🧑‍🍳 Cookbook: [PDF-Based Question Answering with Amazon Bedrock and Haystack](https://haystack.deepset.ai/cookbook/amazon_bedrock_for_documentation_qa)
